--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "logging-done-simple",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Simple console logging import to help with logging to the console.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [
     "logging",
@@ -17,7 +17,9 @@
   "author": "Jeremiah Tenbrink",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^12.0.10",
-    "user": "0.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.5.2",
+    "@types/node": "^12.0.10"
   }
 }
