--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.7",
   "description": "Simple console logging import to help with logging to the console.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeremiahtenbrink/logging-done-simple.git"
   },
   "keywords": [
     "logging",
